--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.menyu.mennyu_rider"
+    package="com.menyu.rider"
     xmlns:tools="http://schemas.android.com/tools">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -29,7 +29,7 @@
 
     <application
         tools:replace="android:label"
-        android:label="MENYU mennyu_rider"
+        android:label="MENYU rider"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
@@ -72,7 +72,7 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <service
-            android:name="com.menyu.mennyu_rider.BackgroundService"
+            android:name="com.menyu.rider.BackgroundService"
             android:enabled="true"
             android:exported="false" />
         <meta-data
